--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -12,6 +12,7 @@
   padding: 1rem 0 3rem;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .results {
@@ -25,6 +26,7 @@
   justify-content: space-between;
   padding-left: 32.5px;
   padding-right: 32.5px;
+  margin-top: auto;
 }
 
 // Styling borrowed from Wulthus. Thank you :)
@@ -34,7 +36,6 @@
   font-weight: 1000;
   padding: 0.8rem 1.2rem;
   border-radius: 10rem;
-  display: block;
   transition: all 0.2s;
 }
 // Jonas' original pagination styling
